[gd_scene load_steps=11 format=3 uid="uid://ck5tlgbl6w7mu"]

[ext_resource type="Texture2D" uid="uid://d4bn5gh3xjosp" path="res://UI/Buttons/builder_base.png" id="1_0h8my"]
[ext_resource type="Script" path="res://UI/Scripts/menu_principal.gd" id="1_cmb6d"]
[ext_resource type="Texture2D" uid="uid://bd74b5pn8isyx" path="res://UI/Buttons/builder_clicked.png" id="2_yakcc"]
[ext_resource type="Texture2D" uid="uid://cvrgbo7j5qlgc" path="res://UI/Buttons/builder_hovered.png" id="3_s2j8s"]
[ext_resource type="Texture2D" uid="uid://0acr6hues7lr" path="res://UI/Buttons/multijoueur_base.png" id="4_bqawy"]
[ext_resource type="Texture2D" uid="uid://doagmlai70smf" path="res://UI/Buttons/multijoueur_clicked.png" id="5_h0xou"]
[ext_resource type="Texture2D" uid="uid://dvgdox4gqx3v4" path="res://UI/Buttons/multijoueur_hovered.png" id="6_qixpb"]
[ext_resource type="Texture2D" uid="uid://ckjad3evdt6ka" path="res://UI/Buttons/quitter_base.png" id="7_ij04q"]
[ext_resource type="Texture2D" uid="uid://drayiume7pthv" path="res://UI/Buttons/quitter_clicked.png" id="8_dlv31"]
[ext_resource type="Texture2D" uid="uid://cv34br03srve7" path="res://UI/Buttons/quitter_hovered.png" id="9_dl2y0"]

[node name="MenuPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cmb6d")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -80.0
offset_top = -73.0
offset_right = 1683.0
offset_bottom = 965.0
scale = Vector2(1, 20)
color = Color(0.529412, 0.478431, 0.317647, 1)

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -129.0
offset_top = -91.0
offset_right = 129.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Builder" type="TextureButton" parent="Buttons"]
layout_mode = 2
texture_normal = ExtResource("1_0h8my")
texture_pressed = ExtResource("2_yakcc")
texture_hover = ExtResource("3_s2j8s")

[node name="Multijoueur" type="TextureButton" parent="Buttons"]
layout_mode = 2
texture_normal = ExtResource("4_bqawy")
texture_pressed = ExtResource("5_h0xou")
texture_hover = ExtResource("6_qixpb")

[node name="Quitter" type="TextureButton" parent="Buttons"]
layout_mode = 2
texture_normal = ExtResource("7_ij04q")
texture_pressed = ExtResource("8_dlv31")
texture_hover = ExtResource("9_dl2y0")

[connection signal="pressed" from="Buttons/Builder" to="." method="_on_builder_pressed"]
[connection signal="pressed" from="Buttons/Multijoueur" to="." method="_on_multijoueur_pressed"]
[connection signal="pressed" from="Buttons/Quitter" to="." method="_on_quitter_pressed"]
